# NDK

AppUpdate/app/: CMakeLists.txt  build.gradle
AppUpdate/app/src/androidTest/java/com/jing/appupdate/: ExampleInstrumentedTest.java
AppUpdate/app/src/main/: AndroidManifest.xml
AppUpdate/app/src/main/cpp/: bsdiff.c  bspatch.c  com_jing_appupdate_utils_BsPatch.h  native-lib.cpp
AppUpdate/app/src/main/java/com/jing/appupdate/: MainActivity.java
AppUpdate/app/src/main/java/com/jing/appupdate/utils/: ApkUtils.java  BsDiff.java  BsPatch.java  Constants.java  DownloadUtils.java
AppUpdate/app/src/main/res/layout/: activity_main.xml
AppUpdate/app/src/test/java/com/jing/appupdate/: ExampleUnitTest.java
AppUpdate/gradle/wrapper/: gradle-wrapper.properties
FFmpegPlayer/app/: CMakeLists.txt  build.gradle
FFmpegPlayer/app/src/androidTest/java/com/jing/ffmpegplayer/: ExampleInstrumentedTest.java
FFmpegPlayer/app/src/main/: AndroidManifest.xml
FFmpegPlayer/app/src/main/cpp/: com_jing_ffmpegplayer_JingPlayer.h  jing_player.c  jing_player.c___jb_tmp___
FFmpegPlayer/app/src/main/java/com/jing/ffmpegplayer/: JingPlayer.java  MainActivity.java
FFmpegPlayer/app/src/main/java/com/jing/ffmpegplayer/view/: VideoView.java
FFmpegPlayer/app/src/main/res/layout/: activity_main.xml
FFmpegPlayer/app/src/test/java/com/jing/ffmpegplayer/: ExampleUnitTest.java
FFmpegPlayer/gradle/wrapper/: gradle-wrapper.properties
FFmpegWithPosix/app/: CMakeLists.txt  build.gradle
FFmpegWithPosix/app/src/androidTest/java/com/dxhj/ffmpegwithposix/: ExampleInstrumentedTest.java
FFmpegWithPosix/app/src/main/: AndroidManifest.xml
FFmpegWithPosix/app/src/main/cpp/: com_dxhj_ffmpegwithposix_JingPlayer.h  jing_player.c
FFmpegWithPosix/app/src/main/cpp/util/: queue.c  queue.h
FFmpegWithPosix/app/src/main/java/com/dxhj/ffmpegwithposix/: JingPlayer.java  MainActivity.java
FFmpegWithPosix/app/src/main/java/com/dxhj/ffmpegwithposix/view/: VideoView.java
FFmpegWithPosix/app/src/main/res/layout/: activity_main.xml
FFmpegWithPosix/app/src/main/res/values/: strings.xml
FFmpegWithPosix/app/src/test/java/com/dxhj/ffmpegwithposix/: ExampleUnitTest.java
FFmpegWithPosix/gradle/wrapper/: gradle-wrapper.properties
FmodChangeVoice/app/: build.gradle
FmodChangeVoice/app/src/main/cpp/: com_jing_fmodchangevoice_EffectUtils.h  effect_fix.cpp
FmodChangeVoice/app/src/test/java/com/jing/fmodchangevoice/: ExampleUnitTest.java
FmodChangeVoice/gradle/wrapper/: gradle-wrapper.properties
Live/app/: CMakeLists.txt  build.gradle
Live/app/src/androidTest/java/com/dxhj/live/: ExampleInstrumentedTest.java
Live/app/src/main/: AndroidManifest.xml
Live/app/src/main/cpp/: com_dxhj_live_jni_PushNative.h  jing_live.c
Live/app/src/main/java/com/dxhj/live/: MainActivity.java
Live/app/src/main/java/com/dxhj/live/jni/: PushNative.java
Live/app/src/main/java/com/dxhj/live/listener/: OnLiveStateChangeListener.java
Live/app/src/main/java/com/dxhj/live/params/: AudioParam.java  VideoParam.java
Live/app/src/main/java/com/dxhj/live/push/: AudioPusher.java  LivePusher.java  Pusher.java  VideoPusher.java
Live/app/src/test/java/com/dxhj/live/: ExampleUnitTest.java
Live/gradle/wrapper/: gradle-wrapper.properties
app/: CMakeLists.txt
app/src/androidTest/java/com/jing/fmodchangevoice/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jing/fmodchangevoice/: EffectUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
